
[metadata]
name=learnkeyhole
version=0.1.3
author=WUXianzhi,ZhengQingzhi,WeiLang
author_email=wu-xz@outlook.com
description=Use this package to train your keyhole and predict it rapidly and right
license=MIT
url= https://github.com/wu-xz21/learnkeyhole  #github地址或其他地址
classifiers=
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    #Natural Language :: Chinese
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX
    Operating System :: Unix
    # Topic :: NLP
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    

[options]
zip_safe=True
packages=find_packages()
include_package_data=True
python_requires= >=3.6,<=3.9
install_requires=
    pandas>=1.5.0
    numpy>=1.20.2
    scipy>=1.9.0
    matplotlib>=3.5.0
    opencv_python>=4.4.0.40
    torch>=1.7.1
    torchvision>=0.8.2
    tqdm>=4.55.0
    pillow>=8.2.0
    h5py>=3.6.0
    PyQt5>=5.14.0
